--- a/BisitaPilipinas/index.html
+++ b/BisitaPilipinas/index.html
@@ -41,8 +41,8 @@
 
     <body>
         <h1>
-            test1
+            MI191
         </h1>
-        <a>test</a>
+        <a>AMIGOS</a>
     </body>
 </html>
