--- a/BisitaPilipinas/index.html
+++ b/BisitaPilipinas/index.html
@@ -30,8 +30,8 @@
                 </form>
         
                 <div class="text-end">
-                  <button type="button" class="btn btn-outline-light me-2">Login</button>
-                  <button type="button" class="btn btn-warning">Sign-up</button>
+                  <button type="button" class="btn btn-outline-light me-2" onclick="document.location ='signPage.html'" >Login</button>
+                  <button type="button" class="btn btn-warning" >Sign-up</button>
                 </div>
               </div>
             </div>
