--- a/BisitaPilipinas/signPage.html
+++ b/BisitaPilipinas/signPage.html
@@ -6,7 +6,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </head>
   <body>
-<section class="vh-100" style="background-color: #508bfc;">
+<section class="vh-100" style="background-color: #1d1b31;">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
@@ -31,7 +31,7 @@
                 <label class="form-check-label" for="form1Example3"> Remember password </label>
               </div>
   
-              <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+              <button class="btn btn-primary btn-lg btn-block" type="submit" onclick="document.location= 'index.html' ">Login</button>
   
               <hr class="my-4">
   
