--- a/BisitaPilipinas/homePage.html
+++ b/BisitaPilipinas/homePage.html
@@ -54,7 +54,8 @@
     <h1>Cover your page.</h1>
     <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
     <p class="lead">
-      <button class="btn btn-lg btn-secondary fw-bold border-white bg-dark" onclick="document.location='signPage.html' ">Sign in</a></button>
+      <button class="btn btn-lg btn-secondary fw-bold border-white bg-dark" onclick="document.location='signPage.html' ">Sign in as Tourist</a></button>
+      <button class="btn btn-lg btn-secondary fw-bold border-white bg-dark" onclick="document.location='signPage.html' ">Sign in as Admin</a></button>
     </p>
   </main>
 
