--- a/BisitaPilipinas/index.html
+++ b/BisitaPilipinas/index.html
@@ -4,7 +4,7 @@
       <link rel="stylesheet" href="CSS/Index.css">
       <link rel="stylesheet" href="CSS/headers.css">
       <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-      <link rel="stylesheet" href="CSS/sidebars.css">
+      <!-- <link rel="stylesheet" href="CSS/sidebars.css"> -->
       <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/sidebars/">
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,8 +24,8 @@
           <div class="logo">
             <i class='bx bxs-flame'></i>
             <div class="logo_name">Bisita Pilipinas</div>
+            <i class='bx bx-menu' id="btn"></i>
           </div>
-          <i class='bx bx-menu' id="btn"></i>
         </div>
         <ul class="nav-list">
           <li>
@@ -78,23 +78,42 @@
     <!-- Sidebar end -->
 
     <div class="home_content">
-      <div class="text"> Map here</div>
+      <!-- Maps -->
+      <div class="mapouter">
+        <div class="gmap_canvas">
+          <iframe width="1080" height="1080" id="gmap_canvas" src="https://maps.google.com/maps?q=intramuros&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+          <a href="https://123movies-to.org">123movies</a><br>
+          <style>.mapouter{position:relative;text-align:right;height:1080px;width:1080px;}</style>
+          <a href="https://www.embedgooglemap.net">google maps widget</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:1080px;width:1080px;}</style>
+        </div></div>
+     <!-- Map end -->
     </div>
      <script>
-      let button = document.querySelector("#btn");
+      let closeBtn = document.querySelector("#btn");
       let sideBar = document.querySelector(".sidebar");
       let searchBtn = document.querySelector(".bx-search");
     
-      button.onclick = function(){
-        button.classList.toggle("active");
-            } 
-      sideBar.onclick = function(){
-        sideBar.classList.toggle("active");
-            } 
-      searchBtn.onclick = function(){
-        searchBtn.classList.toggle("active");
-            } 
+      closeBtn.addEventListener("click", ()=>{
+        sideBar.classList.toggle("open");
+        menuBtnChange();
+      });
+
+      searchBtn.addEventListener("click", ()=>{
+        sideBar.classList.toggle("open")
+        menuBtnChange();
+      });
+
+      function menuBtnChange(){
+        if(sideBar.classList.contains("open")){
+          closeBtn.classList.replace("bx-menu", "bx-menu-alt-right");
+        }
+        else{
+          closeBtn.classList.replace("bx-menu-alt-right" , "bx-menu")
+        }
+      }
      </script>
 
+
+     
     </body>
 </html>
