added new home content

--- a/BisitaPilipinas/BnBOwner.html
+++ b/BisitaPilipinas/BnBOwner.html
@@ -33,7 +33,7 @@
              <span class="tooltip">Search</span>
           </li>
           <li>
-            <a href="#">
+            <a href="homepage.html">
               <i class='bx bx-grid-alt'></i>
               <span class="links_name">List of BnB</span>
             </a>
