Re done everything

--- a/BisitaPilipinas/BnBOwner.html
+++ b/BisitaPilipinas/BnBOwner.html
@@ -81,8 +81,7 @@
         </ul>
       </div>
       <section class="home-section">
-          <div class="text">Dashboard
-            <div class="">
+          <div class="text">Dashboard<div class="">
 
             </div>
           </div>
