Re edit homepage

--- a/BisitaPilipinas/index.html
+++ b/BisitaPilipinas/index.html
@@ -54,8 +54,7 @@
     <h1>Bisita Pilipinas</h1>
     <p class="lead">Bisita Pilipinas is a BnB website application that helps small owners list their houses to provide new business opportunities and attract more tourists.  </p>
     <p class="lead">
-      <button class="btn btn-lg btn-secondary fw-bold border-white bg-dark" onclick="document.location='Backend/index.php' ">Sign in as Tourist</a></button>
-      <button class="btn btn-lg btn-secondary fw-bold border-white bg-dark" onclick="document.location='signPage.html' ">Sign in as Admin</a></button>
+      <button class="btn btn-lg btn-secondary fw-bold border-white bg-dark" onclick="document.location='Backend/index.php' ">Click here to sign in</a></button>
     </p>
   </main>
 
