Uploaded new homepage

--- a/BisitaPilipinas/AdminBnB.html
+++ b/BisitaPilipinas/AdminBnB.html
@@ -19,7 +19,7 @@
       <div class="sidebar">
         <div class="logo-details">
           <i class='bx bx-map-alt icon'></i>
-            <div class="logo_name">Bisita Carranglan</div>
+            <div class="logo_name">Bisita Carranglan Admin</div>
             <i class='bx bx-menu' id="btn" ></i>
         </div>
         <ul class="nav-list">
