--- a/BisitaPilipinas/BnBOwner.html
+++ b/BisitaPilipinas/BnBOwner.html
@@ -14,7 +14,7 @@
       <!-- Javascripts -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
       <!-- Javascripts end -->
-     <title> Bisita Carranglan</title>
+     <title> Bisita Carranglan Owner</title>
     </head>
 
     <body>
@@ -33,14 +33,14 @@
              <span class="tooltip">Search</span>
           </li>
           <li>
-            <a href="homepage.html">
+            <a href="BnBHomepage.html">
               <i class='bx bx-grid-alt'></i>
               <span class="links_name">List of BnB</span>
             </a>
              <span class="tooltip">List of BnB</span>
           </li>
           <li>
-           <a href="#">
+           <a href="BnBRegister.html">
              <i class='bx bx-user' ></i>
              <span class="links_name">List of Registered BnB</span>
            </a>
@@ -81,8 +81,55 @@
         </ul>
       </div>
       <section class="home-section">
-          <div class="text">Dashboard<div class="">
-
+          <div class="text">Your BnB<div class="">
+            <div class="col-sm-8">
+          <!-- House #1 -->
+          <h2>House 1</h2>
+          <h5>House Description</h5>
+          <div class="fakeimg">House Pictures here</div>
+          <p>Description here</p>
+          <p>Location Itsura ng bahay or kahhit andito basta details ng bahay anditoo</p>
+          <!-- First Accordion house -->
+          <div class="accordion" id="accordionExample1">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  More details
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Location
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Ratings 
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- First Accordion House End -->
+           <!-- House #1 End -->
             </div>
           </div>
       </section>
