--- a/BisitaPilipinas/homeP2.html
+++ b/BisitaPilipinas/homeP2.html
@@ -69,7 +69,7 @@
       <section class="home-section">
         <div class="col-sm-8">
           <!-- House #1 -->
-          <h2>House 1</h2>
+          <h2>House 2</h2>
           <h5>House Description</h5>
           <div class="fakeimg">House Pictures here</div>
           <p>Description here</p>
@@ -118,23 +118,22 @@
           <br>
           <br>
           <br>
-            <div class="pagination_section">
-              <nav aria-label="...">
-                <ul class="pagination">          
-                    <a class="page-link" href="homepage.html" tabindex="-1" aria-disabled="false">Previous</a>
-                  <li class="page-item active" aria-current="page">
-                    <a class="page-link" href="homepage.html">1</a></li>
-                  <li class="page-item">
-                    <a class="page-link" href="homeP2.html">2</a>
-                  </li>
-                  <li class="page-item"><a class="page-link" href="homeP3.html">3</a></li>
-                  <li class="page-item">
-                    <a class="page-link" href="homeP3.html">Next</a>
-                  </li>
-                </ul>
-              </nav>
-             </div>
-          </div> 
+          <div class="pagination_section">
+            <nav aria-label="...">
+              <ul class="pagination">
+                  <a class="page-link" href="homepage.html" tabindex="-1" aria-disabled="true">Previous</a>
+                <li class="page-item">
+                  <a class="page-link" href="homepage.html">1</a></li>
+                <li class="page-item active" aria-current="page" >
+                  <a class="page-link" href="homeP2.html">2</a>
+                </li>
+                <li class="page-item"><a class="page-link" href="homeP3.html">3</a></li>
+                <li class="page-item">
+                  <a class="page-link" href="homeP3.html">Next</a>
+                </li>
+              </ul>
+            </nav>
+           </div>
         </div> 
     </div>
     </section>
