--- a/BisitaPilipinas/homeP2.html
+++ b/BisitaPilipinas/homeP2.html
@@ -72,7 +72,8 @@
           <h2>House 2</h2>
           <h5>House Description</h5>
           <div class="fakeimg">House Pictures here</div>
-          <p>Description here</p>
+          <br>
+          <h5>Description here</h5>
           <p>Location Itsura ng bahay or kahhit andito basta details ng bahay anditoo</p>
           <!-- First Accordion house -->
           <div class="accordion" id="accordionExample1">
