--- a/BisitaPilipinas/homepage.html
+++ b/BisitaPilipinas/homepage.html
@@ -72,8 +72,9 @@
           <h2>House 1</h2>
           <h5>House Description</h5>
           <div class="fakeimg">House Pictures here</div>
-          <p>Description here</p>
-          <p>Location Itsura ng bahay or kahhit andito basta details ng bahay anditoo</p>
+          <br>
+          <h5>Description here</h5>
+          <p>Location Itsura ng bahay or kahit andito basta details ng bahay anditoo</p>
           <!-- First Accordion house -->
           <div class="accordion" id="accordionExample1">
             <div class="accordion-item">
@@ -84,7 +85,7 @@
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  <strong>Additional details dito ng BNB makikita yun sa nilagay mo sa pag book ng bnb nilaa so pakilagay nalang siya Dito</strong> 
                 </div>
               </div>
             </div>
@@ -96,7 +97,7 @@
               </h2>
               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  <strong>So dito naman ang location ng bahay kahit naka embedded lang yung map oks na yun</strong> 
                 </div>
               </div>
             </div>
@@ -108,7 +109,7 @@
               </h2>
               <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  <strong>in progress pa ren to pero magagawa ko na to agaad in no time</strong>
                 </div>
               </div>
             </div>
