--- a/BisitaPilipinas/signUp.html
+++ b/BisitaPilipinas/signUp.html
@@ -27,6 +27,9 @@
 	
   <form action="connect.php" method="post" class="mx-1 mx-md-4">
 	
+
+	<input type="text" id="usertype" class="form-control" name="usertype" value="Tourist" required readonly/>
+
 		<div class="d-flex flex-row align-items-center mb-4">
 				<i class="fas fa-user fa-lg me-3 fa-fw"></i>
 				<div class="form-outline flex-fill mb-0">
