--- a/BisitaPilipinas/homeP2.html
+++ b/BisitaPilipinas/homeP2.html
@@ -33,26 +33,21 @@
              <span class="tooltip">Search</span>
           </li>
           <li>
-            <a href="homepage.html">
+            <a href="homepage.php">
               <i class='bx bx-grid-alt'></i>
               <span class="links_name">List of BnB</span>
             </a>
              <span class="tooltip">List of BnB</span>
           </li>
+
           <li>
-           <a href="#">
-             <i class='bx bx-user' ></i>
-             <span class="links_name">List of Registered BnB</span>
-           </a>
-           <span class="tooltip">List of Registered BnB</span>
-         </li>
-         <li>
-           <a href="#">
-             <i class='bx bx-chat' ></i>
-             <span class="links_name">Messages</span>
-           </a>
-           <span class="tooltip">Messages</span>
-         </li>
+            <a href="TouristSpots.php">
+              <i class='bx bx-touristspot' ></i>
+              <span class="links_name">Tourist Spots</span>
+            </a>
+            <span class="tooltip">Tourist Spots</span>
+          </li>
+          
          <li class="profile">
              <div class="profile-details">
                <!--<img src="profile.jpg" alt="profileImg">-->
@@ -122,9 +117,9 @@
           <div class="pagination_section">
             <nav aria-label="...">
               <ul class="pagination">
-                  <a class="page-link" href="homepage.html" tabindex="-1" aria-disabled="true">Previous</a>
+                  <a class="page-link" href="homepage.php" tabindex="-1" aria-disabled="true">Previous</a>
                 <li class="page-item">
-                  <a class="page-link" href="homepage.html">1</a></li>
+                  <a class="page-link" href="homepage.php">1</a></li>
                 <li class="page-item active" aria-current="page" >
                   <a class="page-link" href="homeP2.html">2</a>
                 </li>
