--- a/BisitaPilipinas/homeP3.html
+++ b/BisitaPilipinas/homeP3.html
@@ -39,20 +39,15 @@
             </a>
              <span class="tooltip">List of BnB</span>
           </li>
+          
           <li>
-           <a href="#">
-             <i class='bx bx-user' ></i>
-             <span class="links_name">List of Registered BnB</span>
-           </a>
-           <span class="tooltip">List of Registered BnB</span>
-         </li>
-         <li>
-           <a href="#">
-             <i class='bx bx-chat' ></i>
-             <span class="links_name">Messages</span>
-           </a>
-           <span class="tooltip">Messages</span>
-         </li>
+            <a href="TouristSpots.php">
+              <i class='bx bx-touristspot' ></i>
+              <span class="links_name">Tourist Spots</span>
+            </a>
+            <span class="tooltip">Tourist Spots</span>
+          </li>
+
          <li class="profile">
              <div class="profile-details">
                <!--<img src="profile.jpg" alt="profileImg">-->
@@ -124,7 +119,7 @@
               <ul class="pagination">          
                   <a class="page-link" href="homeP2.html" tabindex="-1" aria-disabled="false">Previous</a>
                 <li class="page-item ">
-                  <a class="page-link" href="homepage.html">1</a></li>
+                  <a class="page-link" href="homepage.php">1</a></li>
                 <li class="page-item">
                   <a class="page-link" href="homeP2.html">2</a>
                 </li>
