--- a/BisitaPilipinas/signUp.html
+++ b/BisitaPilipinas/signUp.html
@@ -28,12 +28,13 @@
   <form action="connect.php" method="post" class="mx-1 mx-md-4">
 	
 
-	<input type="text" id="usertype" class="form-control" name="usertype" value="Tourist" required readonly/>
-
+	<input type="text" id="usertype" class="form-control" name="usertype" value="Tourist" required readonly/><br>
+			
 		<div class="d-flex flex-row align-items-center mb-4">
+	
 				<i class="fas fa-user fa-lg me-3 fa-fw"></i>
 				<div class="form-outline flex-fill mb-0">
-				<input type="text" id="username" class="form-control" name="username" />
+				<input type="text" id="username" class="form-control" name="username" required />
 				<label class="form-label" for="username">Username</label>
 				</div>
 			</div>
@@ -41,7 +42,7 @@
 		<div class="d-flex flex-row align-items-center mb-4">
 			<i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
 			<div class="form-outline flex-fill mb-0">
-			<input type="email" id="email" class="form-control" name="email"/>
+			<input type="email" id="email" class="form-control" name="email" required/>
 			<label class="form-label" for="email">Your Email</label>
 			</div>
 		</div>
@@ -49,11 +50,11 @@
 		<div class="d-flex flex-row align-items-center mb-4">
 			<i class="fas fa-lock fa-lg me-3 fa-fw"></i>
 			<div class="form-outline flex-fill mb-0">
-			<input type="password" id="password" class="form-control" name="password" />
+			<input type="password" id="password" class="form-control" name="password" required/>
 			<label class="form-label" for="password">Password</label>
 			</div>
 		</div>    
-		<input type="submit" name="submit" class="btn btn-primary" />
+		<button type="submit" name="submit" class="btn btn-primary btn-lg">Create</button>
 
   </form>
 						</div> 
